--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+ <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+ new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+ 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+ })(window,document,'script','dataLayer','GTM-TR665T9L');</script>
+
 <title>Die Kleinen Pfoten: Hundesalon, Katzensalon und Tierpflege</title>
 <link href="style.css" rel="stylesheet" type="text/css" />
 <link rel="shortcut icon" href="kleine-pfoten-icon.png" />
@@ -8,9 +14,14 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <meta name="description" content="Der neue Hunde- und Katzensalon in Wels mit expert Personal">
 <meta name="keywords" Content="die kleinen pfoten, hundesalon, katzensalon, tierpflege, grooming, baden, hund ,katze, frizure wels">
+<meta name="viewport" content="width=1024">
 </head>
 <!-- ############################################################## -->
 <body>
+
+ <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TR665T9L"
+ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+
 <div id="wrapper">
 
   <div id="banner">
@@ -21,6 +32,9 @@
 	  <tr>
 	    <td style="vertical-align:top"><p>pfotenkleine@gmail.com</p></td>
 	  </tr>
+	  <tr>
+	    <td colspan="2"><center><img src="images/flag-austria.png" class="flag"><img src="images/flag-uk.png" class="flag"><img src="images/flag-croatia.png" class="flag"></center></td>
+	</tr>
 	</table>
     
   </div>
@@ -46,40 +60,49 @@
 	<img src="artwork/wilkommen.png" class="wilkommen-img">
 	
 	<center><
-	<h1>Hunde und Katzensalon: Ihr Partner in der Tierpflege</h1>
+	<h1>Hunde und Katzensalon:<br>Ihr Partner in der Tierpflege</h1>
 	</center>
 	
-	<img src="images/salon.jpg" class="salon-img">
-
+	<div id="lokal-img">
+	  <table>
+	    <tr>
+		  <td style="width:30%">
+		    <center>
+			<b>Die Kleinen Pfoten</b><br>Linzer Stra&#0223;e 57<br>4600 Wels<br>
+		    <button><a href="service.html">Unsere Services</a></button>
+			<button><a href=https://www.google.com/maps/place/Hundesalon+Die+Kleinen+Pfoten/@48.1627763,14.032698,17z/data=!3m1!4b1!4m6!3m5!1s0x4773f32a065a0963:0x411684e3a942975!8m2!3d48.1627763!4d14.032698!16s%2Fg%2F11w_tcdyph?authuser=0&entry=ttu&g_ep=EgoyMDI1MDQwOS4wIKXMDSoASAFQAw%3D%3D" target="_blank">Auf der Karte anzeigen</a></button>
+		    </center>
+		  </td>
+		</tr>
+	  </table>
+	</div>
 	
 	
-	  <div id="wilkommen">
-	  <center>
-	    <h3>Die Kleinen Pfoten<br>
-		Linzer Stra&#0223;e 57<br>
-		4600 Wels</h3>
-	  </center>
-	  
-	  <br>
-	  <br>
-		
-		<center>
-		<p><b>Mit unserer Karte erhalten Sie einen kostenlosen Service</b></p>
-		
-		<img src="images/karte.png" width="400" height="auto" class="karte">
-		</center>
-	  
-
-	    
-
-	  </div>
-	  
+	<table id="kunden-table">
+	  <tr>
+	    <td colspan="4"><center><h3>Unsere zufriedenen Kunden</h3></center></td>
+	  </tr>
+	  <tr>
+	    <td><img src="kunden/pas-kunden1.png"></td>
+		<td><img src="kunden/pas-kunden2.png"></td>
+		<td><img src="kunden/pas-kunden3.png"></td>
+		<td><img src="kunden/pas-kunden4.png"></td>
+	  </tr>
+	</table>
 	
-	  
+	<div id="visit-karte">
+	  <table>
+	    <tr>
+		  <td style="width:100%">
+		    <center>
+			<b>Mit unserer Karte erhalten Sie einen kostenlosen Service</b>
+		    </center>
+		  </td>
+		</tr>
+	  </table>
+	</div>
 
-	  
 
- 
  </div>
  
  <div id="footer"> 
