--- a/kontakt.html
+++ b/kontakt.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
+ <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+ new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+ 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+ })(window,document,'script','dataLayer','GTM-TR665T9L');</script><head>
+
+
 <title>Die Kleinen Pfoten: Kontakt</title>
 <link href="style.css" rel="stylesheet" type="text/css" />
 <link rel="shortcut icon" href="kleine-pfoten-icon.png" />
@@ -8,9 +14,14 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <meta name="description" content="Der neue Hunde- und Katzensalon in Wels mit expert Personal">
 <meta name="keywords" Content="die kleinen pfoten, hundesalon, katzensalon, tierpflege, grooming, baden, hund ,katze, frizure wels">
+<meta name="viewport" content="width=1024">
 </head>
 <!-- ############################################################## -->
 <body>
+
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TR665T9L"
+ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+
 <div id="wrapper">
 
   <div id="banner">
@@ -21,6 +32,9 @@
 	  <tr>
 	    <td style="vertical-align:top"><p>pfotenkleine@gmail.com</p></td>
 	  </tr>
+	  <tr>
+	    <td colspan="2"><center><img src="images/flag-austria.png" class="flag"><img src="images/flag-uk.png" class="flag"><img src="images/flag-croatia.png" class="flag"></center></td>
+	</tr>
 	</table>
     
   </div>
@@ -45,6 +59,20 @@
 	<h3>Telefon:<br>0677 623 334 93</h3>
 	<br>
 	<h3>E-mail:<br>pfotenkleine@gmail.com</h3>
+	
+	<table id="language-table">
+	  <tr>
+	    <td colspan="3">Sie k&#0246;nnen mit uns auf</td>
+	  </tr>
+	  <tr>
+	    <td><img src="artwork/bullet.png" class="language-bullet">Deutsch</td>
+		<td><img src="artwork/bullet.png" class="language-bullet">Englisch</td>
+		<td><img src="artwork/bullet.png" class="language-bullet">Kroatisch</td>
+	  </tr>
+	  <tr>
+	    <td colspan="3">reden.</td>
+	  </tr>
+	</table>
 	<br>
 	
 	<h4>Die Kleinen Pfoten<br>
