--- a/wichtig.html
+++ b/wichtig.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+
+
 <title>Die Kleinen Pfoten: Tipps</title>
 <link href="style.css" rel="stylesheet" type="text/css" />
 <link rel="shortcut icon" href="kleine-pfoten-icon.png" />
@@ -8,9 +10,14 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <meta name="description" content="Tipps für einen angenehmen Besuch im Tiersalon">
 <meta name="keywords" Content="die kleinen pfoten, hundesalon, katzensalon, tierpflege, grooming">
+<meta name="viewport" content="width=1024">
 </head>
 <!-- ############################################################## -->
 <body>
+
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TR665T9L"
+ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+
 <div id="wrapper">
 
    <div id="banner">
@@ -21,6 +28,9 @@
 	  <tr>
 	    <td style="vertical-align:top"><p>pfotenkleine@gmail.com</p></td>
 	  </tr>
+	  <tr>
+	    <td colspan="2"><center><img src="images/flag-austria.png" class="flag"><img src="images/flag-uk.png" class="flag"><img src="images/flag-croatia.png" class="flag"></center></td>
+	</tr>
 	</table>
     
   </div>
