--- a/index.html
+++ b/index.html
@@ -80,13 +80,16 @@
 	
 	<table id="kunden-table">
 	  <tr>
-	    <td colspan="4"><center><h3>Unsere zufriedenen Kunden</h3></center></td>
+	    <td colspan="4" style="text-align:center"><h3>Unsere zufriedenen Kunden</h3></td>
 	  </tr>
 	  <tr>
 	    <td><img src="kunden/pas-kunden1.png"></td>
 		<td><img src="kunden/pas-kunden2.png"></td>
 		<td><img src="kunden/pas-kunden3.png"></td>
 		<td><img src="kunden/pas-kunden4.png"></td>
+	  </tr>
+	  <tr>
+	    <td colspan="4" style="text-align:center"><a href="https://www.google.com/maps/place/Hundesalon+Die+Kleinen+Pfoten/@48.1627798,14.0301284,17z/data=!3m1!5s0x4773f2a3cbb71c9d:0x7eab3c0aa936969a!4m8!3m7!1s0x4773f32a065a0963:0x411684e3a942975!8m2!3d48.1627763!4d14.032698!9m1!1b1!16s%2Fg%2F11w_tcdyph?authuser=0&entry=ttu&g_ep=EgoyMDI1MDUyMS4wIKXMDSoASAFQAw%3D%3D" target="_blank">Sehen Sie sich unsere aktuellen Bewertungen auf Google an</a></td>
 	  </tr>
 	</table>
 	
