--- a/preise.html
+++ b/preise.html
@@ -73,7 +73,7 @@
 	    <td class="firstcolumn">B&#0252;rsten</td><td>15 &euro;</td><td class="left-border">20 &euro;</td><td class="left-border">25 &euro;</td>
 	  </tr>
 	  <tr>
-	    <td class="firstcolumn" style="border-bottom:none">Entfernung der Unterwolle</td><td style="border-bottom:none">10 &euro;</td><td style="border-bottom:none" class="left-border">15 &euro;</td><td class="left-border" style="border-bottom:none">25 &euro;</td>
+	    <td class="firstcolumn" style="border-bottom:none">Entfernung der Unterwolle</td><td style="border-bottom:none">15 &euro;</td><td style="border-bottom:none" class="left-border">25 &euro;</td><td class="left-border" style="border-bottom:none">35 &euro;</td>
 	  </tr>
 	  
 	  
@@ -96,7 +96,7 @@
 	    <td class="firstcolumn">Floh-Entfernung</td><td colspan="3">20 &euro;</td>
 	  </tr>
 	  <tr>
-	    <td colspan="2" class="firstcolumn">Anpassung j&#0252;nger Hunde an die Behandlngen</td><td>20 &euro;</td><td></td>
+	    <td colspan="2" class="firstcolumn">Anpassung j&#0252;nger Hunde an die Behandlungen</td><td>20 &euro;</td><td></td>
 	  </tr>
 	</table>
   </div>
