--- a/index.html
+++ b/index.html
@@ -63,19 +63,18 @@
 	<h1>Hunde und Katzensalon:<br>Ihr Partner in der Tierpflege</h1>
 	</center>
 	
-	<div id="lokal-img">
-	  <table>
+	  <table id="lokal-band">
 	    <tr>
-		  <td style="width:30%">
+		  <td style="width:40%">
 		    <center>
 			<b>Die Kleinen Pfoten</b><br>Linzer Stra&#0223;e 57<br>4600 Wels<br>
 		    <button><a href="service.html">Unsere Services</a></button>
 			<button><a href=https://www.google.com/maps/place/Hundesalon+Die+Kleinen+Pfoten/@48.1627763,14.032698,17z/data=!3m1!4b1!4m6!3m5!1s0x4773f32a065a0963:0x411684e3a942975!8m2!3d48.1627763!4d14.032698!16s%2Fg%2F11w_tcdyph?authuser=0&entry=ttu&g_ep=EgoyMDI1MDQwOS4wIKXMDSoASAFQAw%3D%3D" target="_blank">Auf der Karte anzeigen</a></button>
 		    </center>
 		  </td>
+		  <td style="width:60%"><img src="images/salon.jpg" style="width:100%"></td>
 		</tr>
 	  </table>
-	</div>
 	
 	
 	<table id="kunden-table">
@@ -93,17 +92,16 @@
 	  </tr>
 	</table>
 	
-	<div id="visit-karte">
-	  <table>
+	  <table id="visit-karte">
 	    <tr>
-		  <td style="width:100%">
+		  <td style="width:30%"><img src="images/visit-karte.png" style="width:100%"></td>
+		  <td style="width:70%">
 		    <center>
-			<b>Mit unserer Karte erhalten Sie einen kostenlosen Service</b>
+			<b>Mit unserer Karte<br>erhalten Sie einen kostenlosen Service</b>
 		    </center>
 		  </td>
 		</tr>
 	  </table>
-	</div>
 
 
  </div>
