--- a/fotogalerie.html
+++ b/fotogalerie.html
@@ -59,6 +59,21 @@
 	  <h1>Fotogalerie unserer zufriedenen Kunden</h1>
 	  
 	    <ul>
+		  <li><img src="galerie/aug2025-1.jpg" class="fotogalerie-horiz"></li>
+		  <li><img src="galerie/aug2025-2.jpg" class="fotogalerie-horiz"></li>
+		  <li><img src="galerie/aug2025-3.jpg" class="fotogalerie-horiz"></li>
+		  <li><img src="galerie/aug2025-4.jpg" class="fotogalerie-horiz"></li>
+		  <li><img src="galerie/aug2025-5.jpg" class="fotogalerie-horiz"></li>
+		  <li><img src="galerie/aug2025-6.jpg" class="fotogalerie-horiz"></li>
+		  <li><img src="galerie/aug2025-7.jpg" class="fotogalerie-horiz"></li>
+		  <li><img src="galerie/aug2025-8.jpg" class="fotogalerie-horiz"></li>
+		  <li><img src="galerie/aug2025-9.jpg" class="fotogalerie-horiz"></li>
+		  <li><img src="galerie/aug2025-10.jpg" class="fotogalerie-horiz"></li>
+		  <li><img src="galerie/aug2025-11.jpg" class="fotogalerie-horiz"></li>
+		  <li><img src="galerie/aug2025-13.jpg" class="fotogalerie-horiz"></li>
+		  <li><img src="galerie/aug2025-14.jpg" class="fotogalerie-horiz"></li>
+		  <li><img src="galerie/aug2025-15.jpg" class="fotogalerie-horiz"></li>
+		  <li><img src="galerie/aug2025-16.jpg" class="fotogalerie-horiz"></li>
 		  <li><img src="galerie/leni1.jpg" class="fotogalerie-horiz"></li>
 		  <li><img src="galerie/leni2.jpg" class="fotogalerie-horiz"></li>
 		  <li><img src="galerie/mica1.jpeg" class="fotogalerie-horiz"></li>
