--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
 			<b>Die Kleinen Pfoten</b><br>Linzer Stra&#0223;e 57<br>4600 Wels<br>
 		    <button><a href="service.html">Unsere Services</a></button>
 			<button><a href=https://www.google.com/maps/place/Hundesalon+Die+Kleinen+Pfoten/@48.1627763,14.032698,17z/data=!3m1!4b1!4m6!3m5!1s0x4773f32a065a0963:0x411684e3a942975!8m2!3d48.1627763!4d14.032698!16s%2Fg%2F11w_tcdyph?authuser=0&entry=ttu&g_ep=EgoyMDI1MDQwOS4wIKXMDSoASAFQAw%3D%3D" target="_blank">Auf der Karte anzeigen</a></button>
-		    </center>
+		    <button><a href="fotogalerie.html">Unsere fotogalerie</a></button>
+
+			</center>
 		  </td>
 		  <td style="width:60%"><img src="images/salon.jpg" style="width:100%"></td>
 		</tr>
@@ -82,10 +84,10 @@
 	    <td colspan="4" style="text-align:center"><h3>Unsere zufriedenen Kunden</h3></td>
 	  </tr>
 	  <tr>
-	    <td><img src="kunden/pas-kunden1.png"></td>
-		<td><img src="kunden/pas-kunden2.png"></td>
-		<td><img src="kunden/pas-kunden3.png"></td>
-		<td><img src="kunden/pas-kunden4.png"></td>
+	    <td><img src="kunden/aug2025-1.png"></td>
+		<td><img src="kunden/aug2025-2.png"></td>
+		<td><img src="kunden/aug2025-3.png"></td>
+		<td><img src="kunden/aug2025-4.png"></td>
 	  </tr>
 	  <tr>
 	    <td colspan="4" style="text-align:center"><a href="https://www.google.com/maps/place/Hundesalon+Die+Kleinen+Pfoten/@48.1627798,14.0301284,17z/data=!3m1!5s0x4773f2a3cbb71c9d:0x7eab3c0aa936969a!4m8!3m7!1s0x4773f32a065a0963:0x411684e3a942975!8m2!3d48.1627763!4d14.032698!9m1!1b1!16s%2Fg%2F11w_tcdyph?authuser=0&entry=ttu&g_ep=EgoyMDI1MDUyMS4wIKXMDSoASAFQAw%3D%3D" target="_blank">Sehen Sie sich unsere aktuellen Bewertungen auf Google an</a></td>
