--- a/index.html
+++ b/index.html
@@ -59,8 +59,19 @@
 	
 	<img src="artwork/wilkommen.png" class="wilkommen-img">
 	
-	<center><
-	<h1>Hunde und Katzensalon:<br>Ihr Partner in der Tierpflege</h1>
+	<center>
+	<ul id="features">
+	  <li><p>Kostenloser<br>Parkplatz</p><br><img src="images/green-tick.png"></li>
+	  <li><p>Neue kunden<br> und junge Hunden</p><br><img src="images/green-tick.png"></li>
+	  <li><p>Sie k&#0246;nnen bei<br>Haustier bleiben</p><br><img src="images/green-tick.png"><br></li>
+	  <li><p>Ein Park<br>in der N&#0228;he</p><br><img src="images/green-tick.png"></li>
+	  <li><p>Kurtzfristige<br>Termine</p><br><img src="images/green-tick.png"></li>
+	  <li><p>Qualifiziertes<br>Personal</p><br><img src="images/green-tick.png"></li>
+	</ul>
+	</center>
+	
+	<center>
+	<h1 style="padding-top:10%">Hunde und Katzensalon:<br>Ihr Partner in der Tierpflege,<br>Zu unserem Team geh&#0246;rt eine Tier#&0228;rztin.</h1>
 	</center>
 	
 	  <table id="lokal-band">
@@ -69,7 +80,7 @@
 		    <center>
 			<b>Die Kleinen Pfoten</b><br>Linzer Stra&#0223;e 57<br>4600 Wels<br>
 		    <button><a href="service.html">Unsere Services</a></button>
-			<button><a href=https://www.google.com/maps/place/Hundesalon+Die+Kleinen+Pfoten/@48.1627763,14.032698,17z/data=!3m1!4b1!4m6!3m5!1s0x4773f32a065a0963:0x411684e3a942975!8m2!3d48.1627763!4d14.032698!16s%2Fg%2F11w_tcdyph?authuser=0&entry=ttu&g_ep=EgoyMDI1MDQwOS4wIKXMDSoASAFQAw%3D%3D" target="_blank">Auf der Karte anzeigen</a></button>
+			<button><a href="https://www.google.com/maps/place/Hundesalon+Die+Kleinen+Pfoten/@48.1627763,14.032698,17z/data=!3m1!4b1!4m6!3m5!1s0x4773f32a065a0963:0x411684e3a942975!8m2!3d48.1627763!4d14.032698!16s%2Fg%2F11w_tcdyph?authuser=0&entry=ttu&g_ep=EgoyMDI1MDQwOS4wIKXMDSoASAFQAw%3D%3D" target="_blank">Auf der Karte anzeigen</a></button>
 		    <button><a href="fotogalerie.html">Unsere fotogalerie</a></button>
 
 			</center>
@@ -90,21 +101,25 @@
 		<td><img src="kunden/aug2025-4.png"></td>
 	  </tr>
 	  <tr>
-	    <td colspan="4" style="text-align:center"><a href="https://www.google.com/maps/place/Hundesalon+Die+Kleinen+Pfoten/@48.1627798,14.0301284,17z/data=!3m1!5s0x4773f2a3cbb71c9d:0x7eab3c0aa936969a!4m8!3m7!1s0x4773f32a065a0963:0x411684e3a942975!8m2!3d48.1627763!4d14.032698!9m1!1b1!16s%2Fg%2F11w_tcdyph?authuser=0&entry=ttu&g_ep=EgoyMDI1MDUyMS4wIKXMDSoASAFQAw%3D%3D" target="_blank">Sehen Sie sich unsere aktuellen Bewertungen auf Google an</a></td>
+	    <td colspan="4" style="text-align:center">
+		  <button><a href="https://www.google.com/maps/place/Hundesalon+Die+Kleinen+Pfoten/@48.1627798,14.0301284,17z/data=!3m1!5s0x4773f2a3cbb71c9d:0x7eab3c0aa936969a!4m8!3m7!1s0x4773f32a065a0963:0x411684e3a942975!8m2!3d48.1627763!4d14.032698!9m1!1b1!16s%2Fg%2F11w_tcdyph?authuser=0&entry=ttu&g_ep=EgoyMDI1MDUyMS4wIKXMDSoASAFQAw%3D%3D" target="_blank">Sehen Sie sich unsere aktuellen Bewertungen auf Google an</a></button>
+		</td>
 	  </tr>
 	</table>
 	
-	  <table id="visit-karte">
-	    <tr>
-		  <td style="width:30%"><img src="images/visit-karte.png" style="width:100%"></td>
-		  <td style="width:70%">
-		    <center>
-			<b>Mit unserer Karte<br>erhalten Sie einen kostenlosen Service</b>
-		    </center>
-		  </td>
-		</tr>
-	  </table>
 
+	<table id="kunden-table">
+	  <tr>
+	    <td colspan="4" style="text-align:center"><h3>F&#0252;r unsere Kunden</h3></td>
+	  </tr>
+	  <tr>
+	    <td><img src="images/visit-karte.png"></td>
+		<td><img src="images/kostenlos.png"></td>
+		<td><img src="images/sandra-mobs.png"></td>
+	  </tr>
+	</table>
+	
+	 
 
  </div>
  
