--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 	</center>
 	
 	<center>
-	<h1 style="padding-top:10%">Hunde und Katzensalon:<br>Ihr Partner in der Tierpflege,<br>Zu unserem Team geh&#0246;rt eine Tier#&0228;rztin.</h1>
+	<h1 style="padding-top:10%">Hunde und Katzensalon:<br>Ihr Partner in der Tierpflege,<br>Zu unserem Team geh&#0246;rt eine Tier&#0228;rztin.</h1>
 	</center>
 	
 	  <table id="lokal-band">
