--- a/service.html
+++ b/service.html
@@ -7,7 +7,7 @@
  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
  })(window,document,'script','dataLayer','GTM-TR665T9L');</script>
 
-<title>Die Kleinen Pfoten: Service</title>
+<title>Die Kleinen Pfoten: Hundesalon, Katzensalon und Tierpflege</title>
 <link href="style.css" rel="stylesheet" type="text/css" />
 <link rel="shortcut icon" href="kleine-pfoten-icon.png" />
 <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
@@ -19,7 +19,7 @@
 <!-- ############################################################## -->
 <body>
 
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TR665T9L"
+ <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TR665T9L"
  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <div id="wrapper">
@@ -54,45 +54,46 @@
   
   <div id="content">
   
-    <h1>Unser Angebot an Pflegeservice f&#0252;r Ihr Haustier:</h1>
-	
-	
-	  <div id="service">
-	    <ul>
-		  <li><img src="artwork/bullet.png" class="bullet-paw">Scheren</li>
-		  <li><img src="artwork/bullet.png" class="bullet-paw">Schneiden</li>
-		  <li><img src="artwork/bullet.png" class="bullet-paw">B&#0252;rsten</li>
-		  <li><img src="artwork/bullet.png" class="bullet-paw">Unterwolle entfernen</li>
-		  <li><img src="artwork/bullet.png" class="bullet-paw">Baden und F&#0246;hnen</li>
-		  <li><img src="artwork/bullet.png" class="bullet-paw">Krallen- und Pfotenpflege</li>
-		  <li><img src="artwork/bullet.png" class="bullet-paw">Augenpflege</li>
-		  <li><img src="artwork/bullet.png" class="bullet-paw">Ohrenpflege</li>
+      <h1>Unser Angebot an Pflegeservice f&#0252;r Ihr Haustier:</h1>
+
+  
+        <ul id="services">
+ 		  <li><img src="services/scheren.png" class="bullet-paw"><br><p>Scheren</p></li>
+		  <li><img src="services/schneiden.png" class="bullet-paw"><br><p>Schneiden</p></li>
+		  <li><img src="services/bursten.png" class="bullet-paw"><br><p>B&#0252;rsten</p></li>
+		  <li><img src="services/unterwolle.png" class="bullet-paw"><br><p>Unterwolle entfernen</p></li>
+		  <li><img src="services/baden.png" class="bullet-paw"><br><p>Baden und F&#0246;hnen</p></li>
+		  <li><img src="services/pfotenpflege.png" class="bullet-paw"><br><p>Krallen- und Pfotenpflege</p></li>
+		  <li><img src="services/augenpflege.png" class="bullet-paw"><br><p>Augenpflege</p></li>
+		  <li><img src="services/ohrenpflege.png" class="bullet-paw"><br><p>Ohrenpflege</p></li>
+        </ul>
+		
+		  <h2 style="clear:both">Sowie:</h2>
+
+		
+		<ul id="services">
+		  <li><img src="services/analdrussen.png" class="bullet-paw"><br><p>Analdrusencheck</p></li>
+		  <li><img src="services/zeckenentfernung.png" class="bullet-paw"><br><p>Zecken Entfernung</p></li>
+		  <li><img src="services/trockenbaden.png" class="bullet-paw"><br><p>Trockenbaden von<br>Katzen und b&#0252;rsten</p></li>
+		  <li><img src="services/entkrallen.png" class="bullet-paw"><br><p>Entkrallen</p></li>
+		  <li><img src="services/knoten.png" class="bullet-paw"><br><p>Knoten im Haar entwirren</p></li>
+		  <li><img src="services/flohentfernung.png" class="bullet-paw"><br><p>Floh-Entfernung</p></li>
+		  <li><img src="services/anpassung.png" class="bullet-paw"><br><p>Anpassungsbehandlung f&#0252;r junge und neue Hunden</p></li>
 		</ul>
-
-	  </div>
+		
+		<table id="services-note">
+		  <tr>
+		    <td><img src="artwork/exclamation.png" height="40" width="auto"></td>
+			<td><b>Das Arbeiten gestaltet sich schwierig, wenn der Hund nass ankommt, 
+	         und es schr&#0228;nkt auch die Wahl der Frisur ein. Die gesamte Behandlung 
+	         wird l&#0228;nger dauern und Ihr Hund wird dar&#0252;ber keine Freude haben.</b></td>
+		  </tr>
+	  </table>
 	  
-
-	  <h2>Sowie:</h2>
-	  <div id="service">
-		<ul>
-		  <li><img src="artwork/bullet.png" class="bullet-paw">Analdrusencheck</li>
-		  <li><img src="artwork/bullet.png" class="bullet-paw">Zecken Entfernung</li>
-		  <li><img src="artwork/bullet.png" class="bullet-paw">Trockenbaden von Katzen und b&#0252;rsten</li>
-		  <li><img src="artwork/bullet.png" class="bullet-paw">Entkrallen</li>
-		  <li><img src="artwork/bullet.png" class="bullet-paw"> Knoten im Haar entwirren</li>
-		  <li><img src="artwork/bullet.png" class="bullet-paw">Floh-Entfernung</li>
-		  <li><img src="artwork/bullet.png" class="bullet-paw">Anpassungsbehandlung f&#0252;r junge und neue Hunden</li>
-		</ul>
-    </div>
-	
-	<p><b>Das Arbeiten gestaltet sich schwierig, wenn der Hund nass ankommt, 
-	und es schr&#0228;nkt auch die Wahl der Frisur ein. Die gesamte Behandlung 
-	wird l&#0228;nger dauern und Ihr Hund wird dar&#0252;ber keine Freude haben.</b></p>
 	  
 
 	  
 
- 
  </div>
  
  <div id="footer"> 
