--- a/kontakt.html
+++ b/kontakt.html
@@ -56,9 +56,12 @@
   
     <div id="kontakt">
 	
+	<center>
 	<h3>Telefon:<br>0677 623 334 93</h3>
 	<br>
 	<h3>E-mail:<br>pfotenkleine@gmail.com</h3>
+	</center>
+	
 	
 	<table id="language-table">
 	  <tr>
@@ -75,17 +78,21 @@
 	</table>
 	<br>
 	
+	<center>
 	<h4>Die Kleinen Pfoten<br>
 	Linzer Stra&#0223;e 57<br>
 	4600 Wels</h4>
+	</center>
   
     <a href="https://www.google.com/maps/place/Hundesalon+Die+Kleinen+Pfoten/@48.1627763,14.0301177,17z/data=!3m1!4b1!4m6!3m5!1s0x4773f32a065a0963:0x411684e3a942975!8m2!3d48.1627763!4d14.032698!16s%2Fg%2F11w_tcdyph?authuser=0&entry=ttu&g_ep=EgoyMDI1MDIwNC4wIKXMDSoASAFQAw%3D%3D" target="_blank">
 	  <img src="artwork/map.png" class="map"></a>
 	  
+	  <center>
 	  <h3>Offnungszeiten:</h3>
-	    <h4 style="margin-left:20px">Montag - Freitag<br>9:00 bis 19:00</h4>
+	    <h4>Montag - Freitag<br>9:00 bis 19:00</h4>
 		<br>
-		<h4 style="margin-left:20px">Samstag:<br>9:00 bis 18:00</h4>
+		<h4>Samstag:<br>9:00 bis 18:00</h4>
+      </center>
   
 	
 	
