--- a/service.html
+++ b/service.html
@@ -58,27 +58,27 @@
 
   
         <ul id="services">
- 		  <li><img src="services/scheren.png" class="bullet-paw"><br><p>Scheren</p></li>
-		  <li><img src="services/schneiden.png" class="bullet-paw"><br><p>Schneiden</p></li>
-		  <li><img src="services/bursten.png" class="bullet-paw"><br><p>B&#0252;rsten</p></li>
-		  <li><img src="services/unterwolle.png" class="bullet-paw"><br><p>Unterwolle entfernen</p></li>
-		  <li><img src="services/baden.png" class="bullet-paw"><br><p>Baden und F&#0246;hnen</p></li>
-		  <li><img src="services/pfotenpflege.png" class="bullet-paw"><br><p>Krallen- und Pfotenpflege</p></li>
-		  <li><img src="services/augenpflege.png" class="bullet-paw"><br><p>Augenpflege</p></li>
-		  <li><img src="services/ohrenpflege.png" class="bullet-paw"><br><p>Ohrenpflege</p></li>
+ 		  <li><img src="services/scheren.png"><br><p>Scheren</p></li>
+		  <li><img src="services/schneiden.png"><br><p>Schneiden</p></li>
+		  <li><img src="services/bursten.png"><br><p>B&#0252;rsten</p></li>
+		  <li><img src="services/unterwolle.png"><br><p>Unterwolle entfernen</p></li>
+		  <li><img src="services/baden.png"><br><p>Baden und F&#0246;hnen</p></li>
+		  <li><img src="services/pfotenpflege.png"><br><p>Krallen- und Pfotenpflege</p></li>
+		  <li><img src="services/augenpflege.png"><br><p>Augenpflege</p></li>
+		  <li><img src="services/ohrenpflege.png"><br><p>Ohrenpflege</p></li>
         </ul>
 		
-		  <h2 style="clear:both">Sowie:</h2>
+		  <h1 style="clear:both">Sowie:</h1>
 
 		
 		<ul id="services">
-		  <li><img src="services/analdrussen.png" class="bullet-paw"><br><p>Analdrusencheck</p></li>
-		  <li><img src="services/zeckenentfernung.png" class="bullet-paw"><br><p>Zecken Entfernung</p></li>
-		  <li><img src="services/trockenbaden.png" class="bullet-paw"><br><p>Trockenbaden von<br>Katzen und b&#0252;rsten</p></li>
-		  <li><img src="services/entkrallen.png" class="bullet-paw"><br><p>Entkrallen</p></li>
-		  <li><img src="services/knoten.png" class="bullet-paw"><br><p>Knoten im Haar entwirren</p></li>
-		  <li><img src="services/flohentfernung.png" class="bullet-paw"><br><p>Floh-Entfernung</p></li>
-		  <li><img src="services/anpassung.png" class="bullet-paw"><br><p>Anpassungsbehandlung f&#0252;r junge und neue Hunden</p></li>
+		  <li><img src="services/analdrussen.png"><br><p>Analdrusencheck</p></li>
+		  <li><img src="services/zeckenentfernung.png"><br><p>Zecken Entfernung</p></li>
+		  <li><img src="services/trockenbaden.png"><br><p>Trockenbaden von<br>Katzen und b&#0252;rsten</p></li>
+		  <li><img src="services/entkrallen.png"><br><p>Entkrallen</p></li>
+		  <li><img src="services/knoten.png"><br><p>Knoten im Haar entwirren</p></li>
+		  <li><img src="services/flohentfernung.png"><br><p>Floh-Entfernung</p></li>
+		  <li><img src="services/anpassung.png"><br><p>Anpassungsbehandlung f&#0252;r junge und neue Hunden</p></li>
 		</ul>
 		
 		<table id="services-note">
