--- a/wichtig.html
+++ b/wichtig.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+ <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+ new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+ 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+ })(window,document,'script','dataLayer','GTM-TR665T9L');</script>
 
-
-<title>Die Kleinen Pfoten: Tipps</title>
+<title>Die Kleinen Pfoten: Hundesalon, Katzensalon und Tierpflege</title>
 <link href="style.css" rel="stylesheet" type="text/css" />
 <link rel="shortcut icon" href="kleine-pfoten-icon.png" />
 <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<meta name="description" content="Tipps für einen angenehmen Besuch im Tiersalon">
-<meta name="keywords" Content="die kleinen pfoten, hundesalon, katzensalon, tierpflege, grooming">
-<meta name="viewport" content="width=1024">
+<meta name="description" content="Der neue Hunde- und Katzensalon in Wels mit expert Personal">
+<meta name="keywords" Content="die kleinen pfoten, hundesalon, katzensalon, tierpflege, grooming, baden, hund ,katze, frizure wels">
+<meta name="viewport" content="width=1024, initial-scale=1.0">
 </head>
 <!-- ############################################################## -->
 <body>
 
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TR665T9L"
+ <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TR665T9L"
  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <div id="wrapper">
 
-   <div id="banner">
+  <div id="banner">
     <table>
 	  <tr>
 	    <td rowspan="2"><img src="artwork/logo-horizontal.png" class="banner-img"></td><td sstyle="vertical-align:bottom"><p>0677 623 334 93</p></td>
@@ -50,60 +54,63 @@
   
   <div id="content">
   
-    <h1>Tipps f&#0252;r einen angenehmen Besuch im Tiersalon</h1>
+      <h1>Tipps f&#0252;r einen angenehmen Besuch im Tiersalon</h1>
+	  
+	  	<h2>Dieser kurze Leitfaden soll Ihnen helfen, Ihrem Haustier einen stressfreien Besuch bei uns zu erm&#0246;glichen und das bestm&#0246;gliche Ergebnis zu erzielen.</h2>
+		
+   <div id="wissenswertes">
 	
-	<p><b>Dieser kurze Leitfaden soll Ihnen helfen, Ihrem Haustier einen stressfreien Besuch bei uns zu erm&#0246;glichen und das bestm&#0246;gliche Ergebnis zu erzielen.</p>
-	
-	<div id="wichtig">
-	
-	<center><img src="images/tartufar.jpg" class="wichtig-img"></center>
+	<center><img src="images/tartufar.jpg"></center>
 	
 	  <p>Bei den Terminen m&#0246;chten wir den bestm&#0246;glichen 
 	  Aufenthalt f&#0252;r Ihr Tier 
 	  gew&#0228;hrleisten. Nehmen Sie sich die Zeit, den Aufenthalt Ihres Tieres so 
 	  stressfrei wie m&#0246;glich zu gestalten.</p>
-	  
+	  <br><br>
 	  <p>Gemeinsam sorgen wir f&#0252;r das 
 	  Wohlbefinden und ein gepflegtes Erscheinungsbild, damit Gesundheit und 
 	  Hygiene optimal unterst&#0252;tzt werden. Unsere Arbeiten sind nicht f&#0252;r 
 	  Ausstellungen oder Wettbewerbe vorgesehen.</p>	
 	  
-	</div>
+  </div>
+  
+  	<div id="wissenswertes">
 	
-	<div id="wichtig">
-	
-		<center><img src="images/cocker.png" class="wichtig-img"o"></center>
+		<center><img src="images/cocker.png"=></center>
 
 	  <p>Falls Ihr Tier Gesundheits- oder Verhaltensprobleme hat, teilen Sie uns 
 	  dies bitte bereits bei der Terminbuchung mit.</p>
-	  
+	  <br><br>
 	  <p>Der erste Termin k&#0246;nnte verk&#0252;rzt oder nicht 
 	  vollst&#0228;ndig durchgef&#0252;hrt werden, falls dieses unter 
 	  Stress oder &#0196;ngsten leidet.</p>
-	  
+	  <br><br>
 	  <p>Bitte vermeiden Sie es, Ihr Tier unmittelbar 
 	  vor der Ankunft zu f&#0252;ttern, damit es w&#0228;hrend der Behandlung 
 	  keinen Durst versp&#0252;rt.</p>
 	  
 	</div>
 	
-	
-	  
-	  <div id="wichtig">
+	 <div id="wichtig">
 	  
 	  	<center><img src="images/husky.png" class="wichtig-img"></center>
 
 	    <p>Bitte erscheinen Sie p&#0252;nktlich zum Termin - kommen Sie jedoch 
 		nicht zu fr&#0252;h.</p>
-		
+		<br><br>
 		<p>Bei Versp&#0228;tung bitten wir Sie, uns telefonisch zu informieren. 
 		Abh&#0228;ngig von der Dauer der Versp&#0228;tung kann es sein, dass der 
 		Komplettservice nicht mehr durchgef&#0252;hrt werden kann.</p>
-		
+		<br><br>
 		<p>Falls Sie Ihren Termin nicht wahrnehmen k&#0246;nnen, geben Sie uns 
 		bitte zuverl&#0228;ssig und rechtzeitig per SMS oder Anruf Bescheid.</p>
 		
      </div>
+
+
+
+
+ </div>
  
  <div id="footer"> 
   
