--- a/wichtig.html
+++ b/wichtig.html
@@ -66,7 +66,7 @@
 	  Aufenthalt f&#0252;r Ihr Tier 
 	  gew&#0228;hrleisten. Nehmen Sie sich die Zeit, den Aufenthalt Ihres Tieres so 
 	  stressfrei wie m&#0246;glich zu gestalten.</p>
-	  <br><br>
+	  <hr>
 	  <p>Gemeinsam sorgen wir f&#0252;r das 
 	  Wohlbefinden und ein gepflegtes Erscheinungsbild, damit Gesundheit und 
 	  Hygiene optimal unterst&#0252;tzt werden. Unsere Arbeiten sind nicht f&#0252;r 
@@ -80,28 +80,28 @@
 
 	  <p>Falls Ihr Tier Gesundheits- oder Verhaltensprobleme hat, teilen Sie uns 
 	  dies bitte bereits bei der Terminbuchung mit.</p>
-	  <br><br>
+	  <hr>
 	  <p>Der erste Termin k&#0246;nnte verk&#0252;rzt oder nicht 
 	  vollst&#0228;ndig durchgef&#0252;hrt werden, falls dieses unter 
 	  Stress oder &#0196;ngsten leidet.</p>
-	  <br><br>
+	  <hr>
 	  <p>Bitte vermeiden Sie es, Ihr Tier unmittelbar 
 	  vor der Ankunft zu f&#0252;ttern, damit es w&#0228;hrend der Behandlung 
 	  keinen Durst versp&#0252;rt.</p>
 	  
 	</div>
 	
-	 <div id="wichtig">
+	 <div id="wissenswertes">
 	  
 	  	<center><img src="images/husky.png" class="wichtig-img"></center>
 
 	    <p>Bitte erscheinen Sie p&#0252;nktlich zum Termin - kommen Sie jedoch 
 		nicht zu fr&#0252;h.</p>
-		<br><br>
+		<hr>
 		<p>Bei Versp&#0228;tung bitten wir Sie, uns telefonisch zu informieren. 
 		Abh&#0228;ngig von der Dauer der Versp&#0228;tung kann es sein, dass der 
 		Komplettservice nicht mehr durchgef&#0252;hrt werden kann.</p>
-		<br><br>
+		<hr>
 		<p>Falls Sie Ihren Termin nicht wahrnehmen k&#0246;nnen, geben Sie uns 
 		bitte zuverl&#0228;ssig und rechtzeitig per SMS oder Anruf Bescheid.</p>
 		
