--- a/index.html
+++ b/index.html
@@ -91,9 +91,7 @@
 	
 	
 	<table id="kunden-table">
-	  <tr>
-	    <td colspan="4" style="text-align:center"><h3>Unsere zufriedenen Kunden</h3></td>
-	  </tr>
+	    <th colspan="4" style="text-align:center">Unsere zufriedenen Kunden</th>
 	  <tr>
 	    <td><img src="kunden/aug2025-1.png"></td>
 		<td><img src="kunden/aug2025-2.png"></td>
@@ -109,9 +107,7 @@
 	
 
 	<table id="kunden-table">
-	  <tr>
-	    <td colspan="4" style="text-align:center"><h3>F&#0252;r unsere Kunden</h3></td>
-	  </tr>
+	    <th colspan="4" style="text-align:center">F&#0252;r unsere Kunden</th>
 	  <tr>
 	    <td><img src="images/visit-karte.png"></td>
 		<td><img src="images/kostenlos.png"></td>
