--- a/kontakt.html
+++ b/kontakt.html
@@ -59,7 +59,7 @@
 	<center>
 	<h3>Telefon:<br>0677 623 334 93</h3>
 	<br>
-	<h3>E-mail:<br>pfotenkleine@gmail.com</h3>
+	<h3 class="email">E-mail:<br>pfotenkleine@gmail.com</h3>
 	</center>
 	
 	
