--- a/service.html
+++ b/service.html
@@ -54,6 +54,8 @@
   
   <div id="content">
   
+    <img src="services/animals.png" class="wilkommen-img">
+  
       <h1>Unser Angebot an Pflegeservice f&#0252;r Ihr Haustier:</h1>
 
   
