--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <meta name="description" content="Der neue Hunde- und Katzensalon in Wels mit expert Personal">
 <meta name="keywords" Content="die kleinen pfoten, hundesalon, katzensalon, tierpflege, grooming, baden, hund ,katze, frizure wels">
-<meta name="viewport" content="width=1024">
+<meta name="viewport" content="width=1024"><script src="script.js" defer></script>
+<script src="script.js" defer></script>
 </head>
 <!-- ############################################################## -->
 <body>
@@ -35,6 +36,9 @@
 	  <tr>
 	    <td colspan="2"><center><img src="images/flag-austria.png" class="flag"><img src="images/flag-uk.png" class="flag"><img src="images/flag-croatia.png" class="flag"></center></td>
 	</tr>
+	<tr>
+	  <td colspan="2"><p>Hunde und Katzen Friseur: Ihr Partner in der Tierpflege,<br>Zu unserem Team geh&#0246;rt eine Tier&#0228;rztin</p>
+	</tr>
 	</table>
     
   </div>
@@ -53,27 +57,27 @@
   
   
   <div id="content">
-  
-    <!-- <h1>Herzlich Wilkommen in die Welt der Kleine Pfoten!</h1> -->
+  	
+    <table id="greeting">
+	  <tr>
+	    <td style="width:30%">
+	      <img src="artwork/wilkommen.png" class="greeting-left">
+		</td>
+		<td style="width:70%">
+		  <ul id="features">
+		    <li><img src="images/green-tick.png" class="greeting-bullet-tick"><p>Kostenloser Parkplatz</p></li>
+			<li><img src="images/green-tick.png" class="greeting-bullet-tick"><p>Neue kunden und junge Hunden</p></li>
+			<li><img src="images/green-tick.png" class="greeting-bullet-tick"><p>Sie k&#0246;nnen beiHaustier bleiben</p></li>
+			<li><img src="images/green-tick.png" class="greeting-bullet-tick"><p>Ein Park in der N&#0228;he</p></li>
+			<li><img src="images/green-tick.png" class="greeting-bullet-tick"><p>Kurtzfristige Termine</p></li>
+			<li><img src="images/green-tick.png" class="greeting-bullet-tick"><p>Qualifiziertes Personal</p></li>
+	      </ul>
+		</td>
+	  </tr>
+	</table>
 	
 	
-	<img src="artwork/wilkommen.png" class="wilkommen-img">
-	
-	<center>
-	<ul id="features">
-	  <li><p>Kostenloser<br>Parkplatz</p><br><img src="images/green-tick.png"></li>
-	  <li><p>Neue kunden<br> und junge Hunden</p><br><img src="images/green-tick.png"></li>
-	  <li><p>Sie k&#0246;nnen bei<br>Haustier bleiben</p><br><img src="images/green-tick.png"><br></li>
-	  <li><p>Ein Park<br>in der N&#0228;he</p><br><img src="images/green-tick.png"></li>
-	  <li><p>Kurtzfristige<br>Termine</p><br><img src="images/green-tick.png"></li>
-	  <li><p>Qualifiziertes<br>Personal</p><br><img src="images/green-tick.png"></li>
-	</ul>
-	</center>
-	
-	<center>
-	<h1 style="padding-top:10%">Hunde und Katzensalon:<br>Ihr Partner in der Tierpflege,<br>Zu unserem Team geh&#0246;rt eine Tier&#0228;rztin.</h1>
-	</center>
-	
+
 	  <table id="lokal-band">
 	    <tr>
 		  <td style="width:40%">
@@ -89,25 +93,22 @@
 		</tr>
 	  </table>
 	
-	
-	<table id="kunden-table">
-	    <th colspan="4" style="text-align:center">Unsere zufriedenen Kunden</th>
+	<table id="kunden">
 	  <tr>
-	    <td><img src="kunden/aug2025-1.png"></td>
-		<td><img src="kunden/aug2025-2.png"></td>
-		<td><img src="kunden/aug2025-3.png"></td>
-		<td><img src="kunden/aug2025-4.png"></td>
-	  </tr>
-	  <tr>
-	    <td colspan="4" style="text-align:center">
+	    <td>
+		  <p>Unsere zufriedenen Kunden</p>
 		  <button><a href="https://www.google.com/maps/place/Hundesalon+Die+Kleinen+Pfoten/@48.1627798,14.0301284,17z/data=!3m1!5s0x4773f2a3cbb71c9d:0x7eab3c0aa936969a!4m8!3m7!1s0x4773f32a065a0963:0x411684e3a942975!8m2!3d48.1627763!4d14.032698!9m1!1b1!16s%2Fg%2F11w_tcdyph?authuser=0&entry=ttu&g_ep=EgoyMDI1MDUyMS4wIKXMDSoASAFQAw%3D%3D" target="_blank">Sehen Sie sich unsere aktuellen Bewertungen auf Google an</a></button>
 		</td>
+		<td>
+		  <img name="cycle">
+		</td>
 	  </tr>
-	</table>
+	</table>	
+
 	
 
 	<table id="kunden-table">
-	    <th colspan="4" style="text-align:center">F&#0252;r unsere Kunden</th>
+	    <th colspan="3" style="text-align:center">F&#0252;r unsere Kunden</th>
 	  <tr>
 	    <td><img src="images/visit-karte.png"></td>
 		<td><img src="images/kostenlos.png"></td>
